css/about.css
.flexCenter {
  display: flex;
  justify-content: center;
}

@keyframes headcolor {
  from {
    text-shadow: inherit;
  }

  to {
    text-shadow: 2px 2px #BA906D;
  }
}

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

* {
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

html,
body {
  font-family: 'Open Sans Condensed', sans-serif;
  color: black;
}

@media (max-width: 500px) {

  html,
  body {
    margin-right: 5px;
    margin-left: 5px;
  }
}

h1,
h2,
h3,
h4,
h5,
.navbtn {
  font-family: 'Amatic SC', cursive;
  color: black;
  text-shadow: 2px 2px #BA906D;
}

h1 {
  font-size: 7rem;
  padding-bottom: 2rem;
  padding-top: 3rem;
}

h2 {
  font-size: 4.5rem;
}

@media (max-width: 800px) {
  h2 {
    font-size: 4.5rem;
  }
}

h3 {
  font-size: 3.5rem;
}

p {
  font-size: 1.6rem;
  line-height: 1.4;
}

@media (max-width: 800px) {
  p {
    width: 85%;
    margin: 20px auto;
  }
}

.h1Mission h1, p {
  color: #F0EADF;
}

.backgroundColor {
  background-color: #D1D3C8;
  padding-top: 3rem;
}

.overlay {
  height: 0%;
  width: 100%;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: #000000;
  background-color: rgba(0, 0, 0, 0.9);
  overflow-y: hidden;
  transition: 0.5s;
}

.overlay-content {
  position: relative;
  top: 25%;
  width: 100%;
  text-align: center;
  margin-top: 0;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.overlay a {
  padding: 0;
  text-decoration: none;
  font-size: 36px;
  color: #818181;
  display: flex;
  flex-direction: row;
  transition: 0.3s;
}

.navbtn {
  display: flex;
  justify-content: center;
  /* padding-top: 3rem; */
}

.overlay a:hover,
.overlay a:focus {
  color: #f1f1f1;
}

.overlay .closebtn {
  position: absolute;
  top: 2px;
  right: 45px;
  font-size: 60px;
}

@media (max-width: 500px) {
  .overlay {
    overflow-y: auto;
  }

  .overlay a {
    font-size: 20px;
  }

  .overlay .closebtn {
    font-size: 40px;
    top: 15px;
    right: 35px;
  }
}

a {
  font-size: 2rem;
  padding-right: 2rem;
  text-decoration: none;
  color: #7B3D4C;
}

h1,
p,
.midPageTxt {
  display: flex;
  justify-content: center;
}

.h1Mission {
  border-bottom: 1.5px dashed #D1D3C8;
  padding-bottom: 3rem;
  margin-bottom: 1rem;
  position: absolute;
  top: 25%;
  left: 50%;
  transform: translate(-50%, -50%);
}

@media (max-width: 800px) {
  .h1Mission {
    top: 14%;
    width: 80%;
  }
}

@media (max-width: 500px) {
  .h1Mission {
    width: 100%;
    border-bottom: none;
  }

  .h1Mission h1 {
    font-size: 5rem;
    padding-bottom: 3.5;
  }

  .h1Mission p {
    font-size: 1.2rem;
    padding-top: 8px;
  }
}

img {
  width: 100%;
  border-radius: 23px;
}

.gf {
  border-radius: 0;
  position: relative;
  text-align: center;
  color: white;
  border-top: 1.5px solid @1020;
  padding-top: 3rem;
  margin-bottom: 2rem;
}

/* profile side  */
.sidenav {
  height: 100%;
  /* 100% Full-height */
  width: 0;
  /* 0 width - change this with JavaScript */
  position: fixed;
  /* Stay in place */
  z-index: 1;
  /* Stay on top */
  top: 0;
  /* Stay at the top */
  left: 0;
  background-color: #111;
  /* Black*/
  overflow-x: hidden;
  /* Disable horizontal scroll */
  padding-top: 60px;
  /* Place content 60px from the top */
  transition: 0.5s;
  /* 0.5 second transition effect to slide in the sidenav */
}

.profilebtn img {
  width: 65%;
}

/* The navigation menu links */
.sidenav a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  transition: 0.3s;
  font-size: 18px;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
  color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.sidenav .closeX {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

.sidenav p {
  color: white;
}

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
#main {
  transition: margin-left .5s;
  padding: 20px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {
    padding-top: 15px;
  }
}

footer {
  display: flex;
  justify-content: center;
}

.fa {
  padding: 20px;
  font-size: 30px;
  width: 50px;
  text-align: center;
  text-decoration: none;
  margin: 5px 2px;
  color: black;
}

